--- a/gb/21/7/7/n13074458.md
+++ b/gb/21/7/7/n13074458.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/piwtjw3874/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/piwtjw3874/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/piwtjw3874/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/piwtjw3874/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/piwtjw3874/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/piwtjw3874/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/piwtjw3874/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/piwtjw3874/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/piwtjw3874/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/piwtjw3874/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/piwtjw3874/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/piwtjw3874/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/piwtjw3874/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/piwtjw3874/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/piwtjw3874/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中资将收购英最大芯片厂 约翰逊下令国安审查</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13074627-GettyImages-55920469-600x400.jpg" />
-<h6>示意图。图为美国超微半导体公司（AMD）生产的300毫米晶圆。 (Photo by Carsten Koall/ Getty Images)
+<h6>示意图。图为美国超微半导体公司（AMD）生产的300毫米晶圆。(Carsten Koall/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年07月08日讯】（大纪元记者谢佳宣综合报导）在中国<ahref="https://github.com/piwtjw3874/djy/blob/master/gb/tag/%E9%97%BB%E6%B3%B0%E7%A7%91%E6%8A%80.md#1">闻泰科技</a>公司周一（7月5日）宣布旗下的荷兰<ahref="https://github.com/piwtjw3874/djy/blob/master/gb/tag/%E5%AE%89%E4%B8%96%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">安世半导体</a>（Nexperia）将收购英国最大的芯片制造商之后，引来了唐宁街的关切，首相<ahref="https://github.com/piwtjw3874/djy/blob/master/gb/tag/%E7%BA%A6%E7%BF%B0%E9%80%8A.md#1">约翰逊</a>表示，他已下令国家安全顾问对这起收购案进行调查。</p>
+	<p>【大纪元2021年07月08日讯】（大纪元记者谢佳宣综合报导）在中国<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%97%BB%E6%B3%B0%E7%A7%91%E6%8A%80.md#1">闻泰科技</a>公司周一（7月5日）宣布旗下的荷兰<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%AE%89%E4%B8%96%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">安世半导体</a>（Nexperia）将收购英国最大的芯片制造商之后，引来了唐宁街的关切，首相<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BA%A6%E7%BF%B0%E9%80%8A.md#1">约翰逊</a>表示，他已下令国家安全顾问对这起收购案进行调查。</p>
 <p>据彭博社报导，Newport Wafer Fab（以下称NWS）是英国制造汽车芯片的主要供应商，除了为汽车厂供货外，该公司一直专注于研发更先进的化合物半导体（compound semiconductors），即横跨5G网络和脸部识别的核心技术。该公司也与英国的一些大学有密切的合作关系。</p>
-<p>而<ahref="https://github.com/piwtjw3874/djy/blob/master/gb/tag/%E5%AE%89%E4%B8%96%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">安世半导体</a>是NWS的第二大股东，其母公司<ahref="https://github.com/piwtjw3874/djy/blob/master/gb/tag/%E9%97%BB%E6%B3%B0%E7%A7%91%E6%8A%80.md#1">闻泰科技</a>则是华为等中国智能手机公司的供应商。</p>
-<p>在英国立法者指出这起收购案恐威胁到英国国内高科技业的未来后，首相<ahref="https://github.com/piwtjw3874/djy/blob/master/gb/tag/%E7%BA%A6%E7%BF%B0%E9%80%8A.md#1">约翰逊</a>周二（7月6日）告诉议会，“我们正在调查此事。我已经要求国家安全顾问进行审查。”</p>
+<p>而<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%AE%89%E4%B8%96%E5%8D%8A%E5%AF%BC%E4%BD%93.md#1">安世半导体</a>是NWS的第二大股东，其母公司<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%97%BB%E6%B3%B0%E7%A7%91%E6%8A%80.md#1">闻泰科技</a>则是华为等中国智能手机公司的供应商。</p>
+<p>在英国立法者指出这起收购案恐威胁到英国国内高科技业的未来后，首相<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BA%A6%E7%BF%B0%E9%80%8A.md#1">约翰逊</a>周二（7月6日）告诉议会，“我们正在调查此事。我已经要求国家安全顾问进行审查。”</p>
 <p>约翰逊说，国家安全顾问斯蒂芬·洛夫格罗夫（Stephen Lovegrove）将“判断他们制造的东西是否对中国有真正的知识产权价值和利益，（以及）是否真的涉及安全影响”。</p>
 <p>根据英国《企业法》（Enterprise Act）规定，政府可以在30天内决定是否让交易继续进行，或要求进行审查。</p>
 <p>这项新法律赋予政府全面的权力，以便在收购案被认为威胁到国家安全时进行干预。部长们将有五年的时间进行审查，并有权在交易被判定为威胁时解除交易。</p>
@@ -26,41 +26,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/19/5/24/n11276488.md#1">华为遭英国芯片巨头断货 难寻替代品</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/6/3/n12996377.md#1">英国最大芯片工厂 担心被中共收购</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/2/n13061905.md#1">无惧汽车芯片短缺 丰田和通用第二季销售告捷</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/5/n13069146.md#1">华为挖墙角？中芯国际核心技术人员吴金刚离职</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/5/24/n11276488.md#1">华为遭英国芯片巨头断货 难寻替代品</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/6/3/n12996377.md#1">英国最大芯片工厂 担心被中共收购</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/7/2/n13061905.md#1">无惧汽车芯片短缺 丰田和通用第二季销售告捷</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/7/5/n13069146.md#1">华为挖墙角？中芯国际核心技术人员吴金刚离职</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11584537.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/4/n9353698.md#1" target="_blank">代理法轮功案 律师从无罪辩护到主动控告</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/14/n10393987.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581299.md#1" target="_blank">绝路逢生  台湾女子找到心灵的蓝天</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/6/14/n13020872.md#1">【命理】彼此等候三十年的夫妻 结局夫荣妻贵</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/2/n13064296.md#1">【未解之谜】绝不能动的中国文物</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/6/26/n13049744.md#1">观画不悟 宋朝宰相错失道缘</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/1/n13061464.md#1">【未解之谜】唐山大地震生还者的濒死体验</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/5/17/n12955212.md#1">【金色种子】走入大法修炼的出家人</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/6/n13072578.md#1">【横河观点】争夺下一代 美教师工会vs家长</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/7/n13074026.md#1">【微视频】微博退市 字节放弃上市 中共怕啥？</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/6/n13072311.md#1">【未解之谜】西藏的神秘现象（2）高僧圆寂人体虹化</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/5/n13069714.md#1">沈舟：习近平晋升上将透露的不寻常意味</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/4/n13066148.md#1">唐青：“复旦帮”当道 习近平陷百年困局</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/5/n13069146.md#1">华为挖墙角？中芯国际核心技术人员吴金刚离职</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/4/n13067202.md#1">章子怡携两个女儿 冒雨捧场汪峰演唱会</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/6/n13072561.md#1">59岁刘德华从影40年 自曝最后悔拍一部电影</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/5/n13070088.md#1">香港行山偶遇周润发 高海宁获赠金句鼓励</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/4/n13067100.md#1">昔日TVB当家花旦 陈慧珊转行当老师引热议</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/6/n13072394.md#1">江一燕两度拒拍一部戏 成就刘诗诗爆红及姻缘</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/5/n13067921.md#1">使用无线电常说的Roger是什么意思？</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/5/n13068515.md#1">二战最年轻士兵 12岁男孩成美国海军英雄</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/2/n13063902.md#1">这些国家打疫苗后疫情升温 与中国疫苗有关？</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/7/6/n13071655.md#1">营养师的强力护眼配方：喝一杯有5种好处</a></li>
-<li><a href="https://github.com/piwtjw3874/djy/blob/master/gb/21/5/11/n12939039.md#1">腰酸、腰痛可能是肾虚 提早保养预防肾脏病</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/piwtjw3874/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/piwtjw3874/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/7/n13074458.htm">中资将收购英最大芯片厂 约翰逊下令国安审查</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/7/n13074458.htm">中资将收购英最大芯片厂 约翰逊下令国安审查</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/piwtjw3874/djy/blob/master/gb/21/7/7/n13074458.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/piwtjw3874/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/piwtjw3874/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/piwtjw3874/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/piwtjw3874/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/piwtjw3874/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/21/7/7/n13074458.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
